<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018,2021  Ian Buttimer
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ianbuttimer.tidder.ui.LoginActivity">

    <TextView
        android:id="@+id/tv_login_loginA"
        android:text="@string/login_to_reddit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_redirect_loginA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_redirect_loginA"
        android:text="@string/redirect_to_reddit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_loginA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_login_loginA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginTop="@dimen/button_margin"
        android:paddingEnd="@dimen/button_margin"
        android:paddingStart="@dimen/button_margin"
        android:contentDescription="@string/login_to_reddit"
        android:drawableStart="@drawable/ic_enter"
        android:text="@string/login_to_reddit"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toTopOf="@+id/guide_top_loginA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_loginA" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top_loginA"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <ImageView
        android:src="@drawable/reddit"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_top_loginA"
        android:layout_width="@dimen/login_icon_size"
        android:layout_height="@dimen/login_icon_size" />

    <!--<TextView-->
        <!--android:id="@+id/tv_login_imp_loginA"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/login_imp_to_reddit_text"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/btn_login_imp_loginA"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="@+id/guide_top_loginA" />-->

    <!--<Button-->
        <!--android:id="@+id/btn_login_imp_loginA"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="@dimen/button_margin"-->
        <!--android:layout_marginEnd="@dimen/button_margin"-->
        <!--android:layout_marginStart="@dimen/button_margin"-->
        <!--android:layout_marginTop="@dimen/button_margin"-->
        <!--android:contentDescription="@string/login_to_reddit"-->
        <!--android:drawableStart="@drawable/ic_enter"-->
        <!--android:text="@string/login_to_reddit"-->
        <!--app:layout_constraintBottom_toBottomOf="@+id/guide_bottom_loginA"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="@+id/tv_login_imp_loginA" />-->

    <!--<androidx.constraintlayout.widget.Guideline-->
        <!--android:id="@+id/guide_bottom_loginA"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--app:layout_constraintGuide_percent="0.66" />-->

    <!--<TextView-->
        <!--android:id="@+id/tv_login_app_loginA"-->
        <!--android:text="@string/login_app_to_reddit_text"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/btn_login_app_loginA"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="@+id/guide_bottom_loginA" />-->

    <!--<Button-->
        <!--android:id="@+id/btn_login_app_loginA"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="@dimen/button_margin"-->
        <!--android:layout_marginEnd="@dimen/button_margin"-->
        <!--android:layout_marginStart="@dimen/button_margin"-->
        <!--android:layout_marginTop="@dimen/button_margin"-->
        <!--android:contentDescription="@string/login_to_reddit"-->
        <!--android:drawableStart="@drawable/ic_enter"-->
        <!--android:text="@string/login_to_reddit"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="@+id/tv_login_app_loginA" />-->


</androidx.constraintlayout.widget.ConstraintLayout>
